# cs6065_final_proj

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/: app.py  model.py  requirements.txt
frontend/: bun.lockb  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  routes.js
frontend/src/context/: authContext.js
frontend/src/examples/Footer/: index.js
frontend/src/examples/Navbars/DashboardNavbar/: index.js
frontend/src/examples/Sidenav/: SidenavCard.js  index.js
frontend/src/examples/Tables/Table/: index.js
frontend/src/firebase/: auth.js  firebase.js
frontend/src/layouts/authentication/components/Footer/: index.js
frontend/src/layouts/authentication/sign-in/: index.js
frontend/src/layouts/authentication/sign-up/: index.js
frontend/src/layouts/dashboard/: index.js  inference_2021_100_150.json  inference_2021_50_74.json
frontend/src/layouts/tables/: index.js
