[tool.poetry]
name = "cs6065-final-proj"
version = "0.1.0"
description = "Management for CS6065 final project making a data science dashboard"
authors = ["Cat Luong <luongcn@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
